--- a/style/style.css
+++ b/style/style.css
@@ -95,3 +95,17 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "Playfair Display", Georgia, "Times New Roman", serif;
     font-style: italic;
 }
+
+.about-officer-column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+  text-align: center;
+}
+
+/* Clear floats after image containers */
+.about-officer-row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
