Background pic and basic layout for resources page with some starter links.

--- a/style/style.css
+++ b/style/style.css
@@ -72,6 +72,12 @@ h1, h2, h3, h4, h5, h6 {
     background-image: url(../images/welcome.jpg);
 }
 
+.lead-resources{
+    background-position: center center;
+    background-size: cover;
+    background-image: url(../images/resources.jpg);
+}
+
 .lead .btn {
     text-shadow: none;
 }
