--- a/style/style.css
+++ b/style/style.css
@@ -78,6 +78,12 @@ h1, h2, h3, h4, h5, h6 {
     background-image: url(../images/resources.jpg);
 }
 
+.lead-events{
+    background-position: center center;
+    background-size: cover;
+    background-image: url(../images/events.jpg);
+}
+
 .lead .btn {
     text-shadow: none;
 }
