--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Montserrat:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
+
+body {
+    font-family: "Montserrat", sans-serif;
+}
 
 h1, h2, h3, h4, h5, h6 {
     font-family: "Playfair Display", Georgia, "Times New Roman", serif;
@@ -66,6 +70,14 @@ h1, h2, h3, h4, h5, h6 {
     text-shadow: 1px 1px black;
 }
 
+.lead .btn {
+    text-shadow: none;
+}
+
+p.lead {
+    font-weight: 500;
+}
+
 .lead-about {
     background-position: center center;
     background-size: cover;
@@ -78,20 +90,28 @@ h1, h2, h3, h4, h5, h6 {
     background-image: url(../images/welcome.jpg);
 }
 
-.lead-resources{
+.lead-resources {
     background-position: center center;
     background-size: cover;
     background-image: url(../images/resources.jpg);
 }
 
-.lead-events{
+.lead-events {
     background-position: center center;
     background-size: cover;
     background-image: url(../images/events.jpg);
 }
 
-.lead .btn {
-    text-shadow: none;
+.lead-contact {
+    background-position: center center;
+    background-size: cover;
+    background-image: url(../images/contact.jpg);
+}
+
+.lead-join {
+    background-position: center center;
+    background-size: cover;
+    background-image: url(../images/join.jpg);
 }
 
 .post {
@@ -99,7 +119,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .post-title {
-    margin-bottom: .25rem;
+    margin-top: 1.5rem;
+    margin-bottom: .75rem;
     font-size: 2.5rem;
 }
 
